Fix gap b/w Frame 1 and 2

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a:hover{
 }
 
 .frame {
-  height: 105vh;
+  height: 100vh;
   width: 100vw;
 }
 
